--- a/examples/helm/applications/my-app.yaml
+++ b/examples/helm/applications/my-app.yaml
@@ -19,3 +19,5 @@ spec:
       helm:
         valueFiles:
           - $local-files/examples/helm/values/values.yaml
+        valuesObject:
+          replicaCount: 5
