--- a/examples/helm/applications/my-app.yaml
+++ b/examples/helm/applications/my-app.yaml
@@ -12,7 +12,7 @@ spec:
     - repoURL: https://github.com/dag-andersen/argocd-diff-preview
       ref: local-files
     - path: examples/helm/charts/myApp
-      repoURL: https://github.com/dag-andersen/argocd-diff-preview
+      repoUL: https://github.com/dag-andersen/argocd-diff-preview
       helm:
         valueFiles:
           - $local-files/examples/helm/values/values.yaml
