--- a/examples/helm/applications/my-app.yaml
+++ b/examples/helm/applications/my-app.yaml
@@ -3,6 +3,9 @@ kind: Application
 metadata:
   name: my-app
   namespace: argocd
+  labels:
+    app: example
+    system: helm-example
 spec:
   project: default
   destination:
