--- a/examples/kustomize/applications/my-service-prod.yaml
+++ b/examples/kustomize/applications/my-service-prod.yaml
@@ -3,6 +3,9 @@ kind: Application
 metadata:
   name: my-service-production
   namespace: argocd
+  labels:
+    app: example
+    system: kustomize-example
 spec:
   project: default
   destination:
