--- a/examples/kustomize/applications/my-service-staging.yaml
+++ b/examples/kustomize/applications/my-service-staging.yaml
@@ -3,6 +3,9 @@ kind: Application
 metadata:
   name: my-service-staging
   namespace: argocd
+  labels:
+    app: fake-example
+    system: kustomize-example
 spec:
   project: default
   destination:
