--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ nav:
   - application-selection.md
 - All Options: options.md
 - Troubleshooting: troubleshooting.md
+- slide-code.md
 
 markdown_extensions:
   - pymdownx.highlight:
